Fixes z-index of footer

--- a/www/src/scss/_footer.scss
+++ b/www/src/scss/_footer.scss
@@ -1,7 +1,5 @@
 #footer {
   height: 40px;
-  position: relative;
-  z-index: 30;
 
   .menu-group > .menu-group-left,
   .menu-group > .menu-group-right {
